Embed Montserrat font and fix spacing of body

--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,19 @@
+@font-face {
+  font-family: montserrat;
+  src: url(/rpg/css/fonts/Montserrat-Regular.ttf);
+}
+
+@font-face {
+  font-family: montserrat-bold;
+  src: url(/rpg/css/fonts/Montserrat-Bold.ttf);
+}
+
 .header {
   color: #fff;
   width: 100%;
   background: #333;
   overflow-y: hidden;
-  font-family: "Montserrat";
+  font-family: "montserrat";
   box-shadow: 5px 5px 5px #999;
   position: fixed;
   top: 0px;
@@ -17,8 +27,8 @@
     display: none !important;
   }
 
-  #body {
-    padding-left: 225px;
+  body {
+    margin-left: 225px;
   }
 }
 
@@ -68,7 +78,7 @@
     display: none;
   }
 
-  #body {
+  body {
     margin-top: 70px;
   }
   
@@ -136,3 +146,15 @@
   text-align: center;
 }
 
+#body {
+  display: block;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#content {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
