--- a/css/main.css
+++ b/css/main.css
@@ -6,16 +6,3 @@ html, body {
   height: 100%;
   width: 100%;
 }
-
-#body {
-  display: block;
-  max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.content {
-  max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
-}
